modified to add content through javascript

--- a/index.html
+++ b/index.html
@@ -2,29 +2,27 @@
 <html lang='en'>
 <head>
   <meta charset='utf-8'>
-  <meta name='viewport' content='width=device-width, initial-scale=1'>
   <title>Quantised</title>
+  <meta name='description' content='Quantised provides a non-mathematical overview of the principles of quantum physics.'>
+  <meta name='keywords' content='quantised, quantum mechanics, quantum physics, quantum theory'>
+  <meta name='viewport' content='width=device-width, initial-scale=1'>
+
   <link href='reset.css' rel='stylesheet' type='text/css'>
   <link href='style.css' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap' rel='stylesheet'>
   <link href='https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap' rel='stylesheet'>
-  <script async src='main.js'></script>
+  <script async src='main.js' type='text/javascript'></script>
 </head>
 <body>
   <header>
     <h1><a href='index.html'>-QUANTISED-</a></h1>
   </header>
   <section>
-    <nav class='col'>
-      <ul>
-        <li>Introduction</li>
-        <li>History</li>
-        <li>Formalism</li>
-        <li>Symmetries</li>
-      </ul>
+    <nav>
+      <ul id='nav'></ul>
     </nav>
-    <article class='col'>
-      The foundation of modern physics is quantum mechanics, a theory that illuminates the behaviour of the microscopic world. Unfortunately, its success arises at the cost of human intuition. In the following series of articles, I have attempted to illustrate the principles of quantum theory, in a concise and non-mathematical form.
+    <article>
+      <p class='content'>Quantised homepage</p>
     </article>
   </section>
 </body>
