--- a/index.html
+++ b/index.html
@@ -17,13 +17,11 @@
   <header>
     <h1><a href='index.html'>-QUANTISED-</a></h1>
   </header>
-  <section>
-    <nav>
-      <ul id='nav'></ul>
-    </nav>
+  <main>
+    <nav></nav>
     <article>
-      <p class='content'>Quantised homepage</p>
+      <p>Quantised homepage</p>
     </article>
-  </section>
+  </main>
 </body>
 </html>
