--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
   <header>
-    <h1><a href='index.html'>-QUANTISED-</a></h1>
+    <h1>-QUANTISED-</h1>
   </header>
   <main>
     <nav></nav>
