added social card metas

--- a/index.html
+++ b/index.html
@@ -1,28 +1,34 @@
 <!DOCTYPE html>
 <html lang='en'>
-<head>
-  <meta charset='utf-8'>
-  <title>Quantised</title>
-  <meta name='description' content='Quantised provides a non-mathematical overview of the principles of quantum physics.'>
-  <meta name='keywords' content='quantised, quantum mechanics, quantum physics, quantum theory'>
-  <meta name='viewport' content='width=device-width, initial-scale=1'>
+  <head>
+    <meta charset='utf-8'>
+    <title>Quantised</title>
+    <meta name='description' content='Understand the counterintuitive foundations of quantum physics.'>
+    <meta name='keywords' content='quantised, quantum mechanics, quantum physics, quantum theory'>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link href='favicon.png' rel='icon' type='images/png'>
 
-  <link href='reset.css' rel='stylesheet' type='text/css'>
-  <link href='style.css' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap' rel='stylesheet'>
-  <link href='https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap' rel='stylesheet'>
-  <script async src='main.js' type='text/javascript'></script>
-</head>
-<body>
-  <header>
-    <h1>-QUANTISED-</h1>
-  </header>
-  <main>
-    <nav></nav>
-    <article>
-      <h3></h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut porttitor ligula nec magna finibus, ut euismod ipsum commodo. Etiam ut malesuada metus. Donec ornare sem imperdiet dolor sagittis lobortis. Aliquam cursus vehicula sapien eget efficitur. Duis posuere mattis turpis, vitae luctus augue elementum nec. Donec vel mollis enim. Mauris pulvinar vestibulum nisi ut pretium. Mauris efficitur leo nulla. Curabitur malesuada massa sed congue efficitur. In malesuada erat ipsum, ut egestas tortor fringilla et. Duis mi mauris, iaculis ut diam a, varius luctus lacus. In maximus euismod ligula ut aliquet. Nunc tempus viverra quam a egestas. Vestibulum finibus tellus urna, blandit efficitur eros luctus eget. Suspendisse tristique augue quis eros bibendum lobortis. Morbi porta, ex sit amet tincidunt rhoncus, sem ante tempor arcu, eget hendrerit justo velit convallis nunc.</p>
-    </article>
-  </main>
-</body>
+    <link href='reset.css' rel='stylesheet' type='text/css'>
+    <link href='style.css' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap' rel='stylesheet'>
+    <script async src='main.js' type='text/javascript'></script>
+
+    <meta name='twitter:card' content='summary'>
+    <meta name='og:title' content='Quantised'>
+    <meta name='og:description' content='Understand the counterintuitive foundations of quantum physics.'>
+    <meta name='og:url' content='https://artaurus.github.io/quantised'>
+  </head>
+  <body>
+    <header>
+      <h1>-QUANTISED-</h1>
+    </header>
+    <main>
+      <nav></nav>
+      <article>
+        <h3></h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut porttitor ligula nec magna finibus, ut euismod ipsum commodo. Etiam ut malesuada metus. Donec ornare sem imperdiet dolor sagittis lobortis. Aliquam cursus vehicula sapien eget efficitur. Duis posuere mattis turpis, vitae luctus augue elementum nec. Donec vel mollis enim. Mauris pulvinar vestibulum nisi ut pretium. Mauris efficitur leo nulla. Curabitur malesuada massa sed congue efficitur. In malesuada erat ipsum, ut egestas tortor fringilla et. Duis mi mauris, iaculis ut diam a, varius luctus lacus. In maximus euismod ligula ut aliquet. Nunc tempus viverra quam a egestas. Vestibulum finibus tellus urna, blandit efficitur eros luctus eget. Suspendisse tristique augue quis eros bibendum lobortis. Morbi porta, ex sit amet tincidunt rhoncus, sem ante tempor arcu, eget hendrerit justo velit convallis nunc.</p>
+      </article>
+    </main>
+  </body>
 </html>
