--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta name='twitter:card' content='summary'>
     <meta name='og:title' content='Quantised'>
     <meta name='og:description' content='Understand the counterintuitive foundations of quantum physics.'>
-    <meta name='og:url' content='https://artaurus.github.io/quantised'>
+    <meta name='og:url' content='https://artaurus.github.io/quantised/'>
   </head>
   <body>
     <header>
