--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link href='https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap' rel='stylesheet'>
     <script async src='main.js' type='text/javascript'></script>
 
+    <meta name="google-site-verification" content="UK_n_Zt1e7Y8-v_RO7W6DAx-yRbAM6VGYVwlwOBe5pQ">
     <meta name='twitter:card' content='summary'>
     <meta name='og:title' content='Quantised'>
     <meta name='og:description' content='Understand the counterintuitive foundations of quantum physics.'>
