--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <script async src='main.js' type='text/javascript'></script>
 
     <meta name="google-site-verification" content="UK_n_Zt1e7Y8-v_RO7W6DAx-yRbAM6VGYVwlwOBe5pQ">
+    <meta name="google-site-verification" content="UK_n_Zt1e7Y8-v_RO7W6DAx-yRbAM6VGYVwlwOBe5pQ">
     <meta name='twitter:card' content='summary'>
     <meta name='og:title' content='Quantised'>
     <meta name='og:description' content='Understand the counterintuitive foundations of quantum physics.'>
     <meta name='og:url' content='https://artaurus.github.io/quantised/'>
-    <meta name="google-site-verification" content="UK_n_Zt1e7Y8-v_RO7W6DAx-yRbAM6VGYVwlwOBe5pQ" />
   </head>
   <body>
     <header>
