--- a/404.html
+++ b/404.html
@@ -11,7 +11,8 @@
     <link href='https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap' rel='stylesheet'>
     <script async type='text/javascript'>
-      location.href = 'https://artaurus.github.io/quantised/';
+    const route = location.pathname.split('/')[2];
+    location.href = 'https://artaurus.github.io/quantised/#' + route;
     </script>
   </head>
   <body>
