added placeholder anchor to header

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <header>
-      <h1>-QUANTISED-</h1>
+      <h1><a>-QUANTISED-</a></h1>
     </header>
     <main>
       <nav>
