--- a/index.html
+++ b/index.html
@@ -14,12 +14,11 @@
     <link href='https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap' rel='stylesheet'>
     <script async src='main.js' type='text/javascript'></script>
 
-    <meta name="google-site-verification" content="UK_n_Zt1e7Y8-v_RO7W6DAx-yRbAM6VGYVwlwOBe5pQ">
-    <meta name="google-site-verification" content="UK_n_Zt1e7Y8-v_RO7W6DAx-yRbAM6VGYVwlwOBe5pQ">
     <meta name='twitter:card' content='summary'>
     <meta name='og:title' content='Quantised'>
     <meta name='og:description' content='Understand the counterintuitive foundations of quantum physics.'>
     <meta name='og:url' content='https://artaurus.github.io/quantised/'>
+    <meta name="google-site-verification" content="UK_n_Zt1e7Y8-v_RO7W6DAx-yRbAM6VGYVwlwOBe5pQ">
   </head>
   <body>
     <header>
@@ -30,8 +29,18 @@
         <ul></ul>
       </nav>
       <article>
-        <h3>What is quantum physics?</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut porttitor ligula nec magna finibus, ut euismod ipsum commodo. Etiam ut malesuada metus. Donec ornare sem imperdiet dolor sagittis lobortis. Aliquam cursus vehicula sapien eget efficitur. Duis posuere mattis turpis, vitae luctus augue elementum nec. Donec vel mollis enim. Mauris pulvinar vestibulum nisi ut pretium. Mauris efficitur leo nulla. Curabitur malesuada massa sed congue efficitur. In malesuada erat ipsum, ut egestas tortor fringilla et. Duis mi mauris, iaculis ut diam a, varius luctus lacus. In maximus euismod ligula ut aliquet. Nunc tempus viverra quam a egestas. Vestibulum finibus tellus urna, blandit efficitur eros luctus eget. Suspendisse tristique augue quis eros bibendum lobortis. Morbi porta, ex sit amet tincidunt rhoncus, sem ante tempor arcu, eget hendrerit justo velit convallis nunc.</p>
+        <h3>Overview</h3>
+        <p>
+          Quantum mechanics is the cornerstone of modern physics. In simple words, it illuminates the realm of the very tiny. Despite successfully infiltrating almost every branch of physics, there is no established interpretation of its fundamental principles. Perhaps because it renders a departure from ordinary human intuition.
+          <br><br>
+          In this series of articles (that could presumably serve as chapters in a book), I will elucidate the foundations of the theory whilst curbing the abstract mathematics, so as to engage readers of a non-scientific background as well.
+          <br><br>
+          <h3>References (technical):</h3>
+          1. Ramamurti Shankar's <i>Principles of Quantum Mechanics</i><br>
+          2. Paul Dirac's <i>Lectures on Quantum Mechanics and Relativistic Field Theory</i><br>
+          3. Steven Weinberg's <i>Lectures on Quantum Mechanics</i><br>
+          Two renowned books that I have yet to get my hands on are J. J. Sakurai's <i>Modern Quantum Mechanics</i> and Dirac's <i>Principles of Quantum Mechanics</i>.
+        </p>
       </article>
     </main>
   </body>
