--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href='reset.css' rel='stylesheet' type='text/css'>
     <link href='style.css' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap' rel='stylesheet'>
-    <link href='https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap' rel='stylesheet'>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap" rel="stylesheet">
     <script async src='main.js' type='text/javascript'></script>
 
     <meta name='twitter:card' content='summary'>
@@ -31,15 +31,9 @@
       <article>
         <h3>Overview</h3>
         <p>
-          Quantum mechanics is the cornerstone of modern physics. In simple words, it illuminates the realm of the very tiny. Despite successfully infiltrating almost every branch of physics, there is no established interpretation of its fundamental principles. Perhaps because it renders a departure from ordinary human intuition.
-          <br><br>
-          In this series of articles (that could presumably serve as chapters in a book), I will elucidate the foundations of the theory whilst curbing the abstract mathematics, so as to engage readers of a non-scientific background as well.
-          <br><br>
-          <h3>References (technical):</h3>
-          1. Ramamurti Shankar's <i>Principles of Quantum Mechanics</i><br>
-          2. Paul Dirac's <i>Lectures on Quantum Mechanics and Relativistic Field Theory</i><br>
-          3. Steven Weinberg's <i>Lectures on Quantum Mechanics</i><br>
-          Two renowned books that I have yet to get my hands on are J. J. Sakurai's <i>Modern Quantum Mechanics</i> and Dirac's <i>Principles of Quantum Mechanics</i>.
+          Quantum mechanics is the cornerstone of modern physics. In simple words, it illuminates the realm of the very tiny. Despite successfully infiltrating almost every branch of physics, there is no established interpretation of its fundamental principles. Perhaps because it renders an uninvited departure from ordinary human intuition. In this series of articles, that could presumably serve as chapters in a book, I will elucidate the foundations of the theory whilst curbing the abstract mathematics. Or at the very least, attempt to do so.
+          <br><br> 
+          1. Introduction<br>
         </p>
       </article>
     </main>
