--- a/index.html
+++ b/index.html
@@ -31,9 +31,13 @@
       <article>
         <h3>Overview</h3>
         <p>
-          Quantum mechanics is the cornerstone of modern physics. In simple words, it illuminates the realm of the very tiny. Despite successfully infiltrating almost every branch of physics, there is no established interpretation of its fundamental principles. Perhaps because it renders an uninvited departure from ordinary human intuition. In this series of articles, that could presumably serve as chapters in a book, I will elucidate the foundations of the theory whilst curbing the abstract mathematics. Or at the very least, attempt to do so.
-          <br><br> 
+          Quantum mechanics is the cornerstone of modern physics. In simple words, it illuminates the realm of the very tiny. Despite successfully infiltrating almost every branch of physics, there is no established interpretation of its fundamental principles; perhaps because it renders an uninvited departure from ordinary human intuition. This series of articles could presumably serve as chapters in a book, in which I will elucidate the foundations of the theory whilst curbing the abstract mathematics. Or at the very least, attempt to do so.
+          <br><br>
           1. Introduction<br>
+          A chronological recollection of the scientific advances that kickstarted the quantum revolution in the early 20th century.
+          <br><br>
+          2. Formalism<br>
+          The concepts behind Werner Heisenberg's matrix mechanics, Erwin Schr&ouml;dinger's wave mechanics, and Paul Dirac's transformation theory.
         </p>
       </article>
     </main>
