--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name='description' content='Understand the counterintuitive foundations of quantum physics.'>
     <meta name='keywords' content='quantised, quantum mechanics, quantum physics, quantum theory'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link href='favicon.png' rel='icon' type='images/png'>
 
+    <link href='favicon.png' rel='icon' type='images/png'>
     <link href='reset.css' rel='stylesheet' type='text/css'>
     <link href='style.css' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap' rel='stylesheet'>
@@ -37,7 +37,7 @@
           A chronological recollection of the scientific advances that kickstarted the quantum revolution in the early 20th century.
           <br><br>
           2. Formalism<br>
-          The concepts behind Werner Heisenberg's matrix mechanics, Erwin Schr&ouml;dinger's wave mechanics, and Paul Dirac's transformation theory.
+          The concepts behind Werner Heisenberg's matrix mechanics, Erwin Schr&ouml;dinger's implementation of wave-particle duality, and Paul Dirac's transformation theory.
         </p>
       </article>
     </main>
