--- a/index.html
+++ b/index.html
@@ -31,13 +31,34 @@
       <article>
         <h3>Overview</h3>
         <p>
-          Quantum mechanics is the cornerstone of modern physics. In simple words, it illuminates the realm of the very tiny. Despite successfully infiltrating almost every branch of physics, there is no established interpretation of its fundamental principles; perhaps because it renders an uninvited departure from ordinary human intuition. This series of articles could presumably serve as chapters in a book, in which I will elucidate the foundations of the theory whilst curbing the abstract mathematics. Or at the very least, attempt to do so.
+          Quantum mechanics is the cornerstone of modern physics. In simple words, it illuminates the realm of the very tiny. Despite successfully infiltrating almost every branch of physics, there is no established interpretation of its fundamental principles. Perhaps because it renders an uninvited departure from ordinary human intuition.
           <br><br>
-          1. Introduction<br>
-          A chronological recollection of the scientific advances that kickstarted the quantum revolution in the early 20th century.
+          This series of articles could presumably serve as chapters of a book, in which I will elucidate the foundations of the theory whilst curbing the abstract mathematics. Or at the very least, attempt to do so.
           <br><br>
-          2. Formalism<br>
-          The concepts behind Werner Heisenberg's matrix mechanics, Erwin Schr&ouml;dinger's implementation of wave-particle duality, and Paul Dirac's transformation theory.
+          <b><a href='#Introduction'>Introduction</a></b><br>
+          Max Planck's and Albert Einstein's quantisation of light, Niels Bohr's stationary states, and Werner Heisenberg's matrix mechanics.
+          <br><br>
+          <b><a href='#Wave-Particle%20Duality'>Wave-Particle Duality</a></b><br>
+          Louis de Broglie's postulated matter waves, Erwin Schr&ouml;dinger's wavefunction, and Max Born's probabilistic interpretation.
+          <br><br>
+          <b><a href='#Transformation%20Theory'>Transformation Theory</a></b><br>
+          Concepts behind Paul Dirac's mathematical reconciliation of Heisenberg's matrices and Schr&ouml;dinger's waves.
+          <br><br>
+          <b><a href='#Uncertainty'>Uncertainty</a></b><br>
+          Heisenberg's principle visualised as a consequence of wave-particle duality.
+          <br><br>
+          <b><a href='#Spin'>Spin</a></b><br>
+          Something strange.
+          <br><br>
+          <b><a href='#Antiparticles'>Antiparticles</a></b><br>
+          A relativistic emergence.
+          <br><br>
+          <b><a href='#Entanglement'>Entanglement</a></b><br>
+          David Bohm's nonlocality and John Bell's inequalities.
+          <br><br>
+          <b><a href='#Interpretations'>Interpretations</a></b><br>
+          Bohr's Copenhagen, Einstein's realist, and that of many worlds.
+          <br><br>
         </p>
       </article>
     </main>
