--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <link href='reset.css' rel='stylesheet' type='text/css'>
     <link href='style.css' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap' rel='stylesheet'>
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap' rel='stylesheet'>
     <script async src='main.js' type='text/javascript'></script>
 
     <meta name='twitter:card' content='summary'>
     <meta name='og:title' content='Quantised'>
     <meta name='og:description' content='Understand the counterintuitive foundations of quantum physics.'>
     <meta name='og:url' content='https://artaurus.github.io/quantised/'>
-    <meta name="google-site-verification" content="UK_n_Zt1e7Y8-v_RO7W6DAx-yRbAM6VGYVwlwOBe5pQ">
+    <meta name='google-site-verification' content='UK_n_Zt1e7Y8-v_RO7W6DAx-yRbAM6VGYVwlwOBe5pQ'>
   </head>
   <body>
     <header>
@@ -33,7 +33,7 @@
         <p>
           Quantum mechanics is the cornerstone of modern physics. In simple words, it illuminates the realm of the very tiny. Despite successfully infiltrating almost every branch of physics, there is no established interpretation of its fundamental principles. Perhaps because it renders an uninvited departure from ordinary human intuition.
           <br><br>
-          This series of articles could presumably serve as chapters of a book, in which I will elucidate the foundations of the theory whilst curbing the abstract mathematics. Or at the very least, attempt to do so.
+          This series of articles could presumably serve as chapters of a book, in which I will elucidate the foundations of the theory while curbing the abstract mathematics. Or at the very least, attempt to do so.
           <br><br>
           <b><a href='#Introduction'>Introduction</a></b><br>
           Max Planck's and Albert Einstein's quantisation of light, Niels Bohr's stationary states, and Werner Heisenberg's matrix mechanics.
@@ -58,6 +58,8 @@
           <br><br>
           <b><a href='#Interpretations'>Interpretations</a></b><br>
           Bohr's Copenhagen, Einstein's realist, and that of many worlds.
+          <br><br>
+          A recommendation is the book 'Quantum' by Manjit Kumar; a captivating exposition, including an extensive historical recollection, of the quantum revolution. For the mathematically inclined, my references are Ramamurti Shankar's 'Principles of Quantum Mechanics', Steven Weinberg's 'Lectures on Quantum Mechanics', and Paul Dirac's 'Lectures on Quantum Mechanics and Relativistic Field Theory'.
           <br><br>
         </p>
       </article>
