renamed favicon, added header anchor and chapter

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name='keywords' content='quantised, quantum mechanics, quantum physics, quantum theory'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
 
-    <link href='favicon.png' rel='icon' type='images/png'>
+    <link href='images/psi.png' rel='icon' type='images/png'>
     <link href='reset.css' rel='stylesheet' type='text/css'>
     <link href='style.css' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap' rel='stylesheet'>
@@ -22,7 +22,7 @@
   </head>
   <body>
     <header>
-      <h1><a>-QUANTISED-</a></h1>
+      <h1><a href='https://artaurus.github.io/quantised/'>-QUANTISED-</a></h1>
     </header>
     <main>
       <nav>
@@ -54,12 +54,15 @@
           A relativistic emergence.
           <br><br>
           <b><a href='#Entanglement'>Entanglement</a></b><br>
-          David Bohm's nonlocality and John Bell's inequalities.
+          David Bohm's nonlocality: a violation of Einstein's relativity.
           <br><br>
           <b><a href='#Interpretations'>Interpretations</a></b><br>
           Bohr's Copenhagen, Einstein's realist, and that of many worlds.
           <br><br>
-          A recommendation is the book 'Quantum' by Manjit Kumar; a captivating exposition, including an extensive historical recollection, of the quantum revolution. For the mathematically inclined, my references are Ramamurti Shankar's 'Principles of Quantum Mechanics', Steven Weinberg's 'Lectures on Quantum Mechanics', and Paul Dirac's 'Lectures on Quantum Mechanics and Relativistic Field Theory'.
+          <b><a href='#Measurement'>Measurement</a></b><br>
+          Einstein-Podolsky-Rosen paper, Bohm's hidden variables, and John Bell's inequalities.
+          <br><br>
+          A recommendation is the book <i>Quantum</i> by Manjit Kumar; a captivating exposition, including an extensive historical recollection, of the quantum revolution. For the mathematically inclined, my references are Ramamurti Shankar's <i>Principles of Quantum Mechanics</i>, Steven Weinberg's <i>Lectures on Quantum Mechanics</i>, and Paul Dirac's <i>Lectures on Quantum Mechanics and Relativistic Field Theory</i>.
           <br><br>
         </p>
       </article>
