--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link href='images/psi.png' rel='icon' type='images/png'>
     <link href='reset.css' rel='stylesheet' type='text/css'>
     <link href='style.css' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap' rel='stylesheet'>
-    <link href='https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap' rel='stylesheet'>
+    <link href='https://fonts.gstatic.com' rel='preconnect' crossorigin>
+    <link href='https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap' rel="stylesheet">
     <script async src='main.js' type='text/javascript'></script>
 
     <meta name='twitter:card' content='summary'>
@@ -36,34 +36,45 @@
           This series of articles could presumably serve as chapters of a book, in which I will elucidate the foundations of the theory while curbing the abstract mathematics. Or at the very least, attempt to do so.
           <br><br>
           <b><a href='#Introduction'>Introduction</a></b><br>
-          Max Planck's and Albert Einstein's quantisation of light, Niels Bohr's stationary states, and Werner Heisenberg's matrix mechanics.
+          - Photons<br>
+          - Stationary states<br>
+          - Matrix mechanics
           <br><br>
           <b><a href='#Wave-Particle%20Duality'>Wave-Particle Duality</a></b><br>
-          Louis de Broglie's postulated matter waves, Erwin Schr&ouml;dinger's wavefunction, and Max Born's probabilistic interpretation.
+          - Matter waves<br>
+          - Wavefunction<br>
+          - Probabilistic interpretation
           <br><br>
           <b><a href='#Transformation%20Theory'>Transformation Theory</a></b><br>
-          Concepts behind Paul Dirac's mathematical reconciliation of Heisenberg's matrices and Schr&ouml;dinger's waves.
+          - State vector<br>
+          - Observables<br>
+          - Time evolution
           <br><br>
           <b><a href='#Uncertainty'>Uncertainty</a></b><br>
-          Heisenberg's principle visualised as a consequence of wave-particle duality.
+          - Position and momentum<br>
+          - Energy and time<br>
+          - General principle
           <br><br>
           <b><a href='#Spin'>Spin</a></b><br>
-          Something strange.
+          - Rotational symmetry
           <br><br>
           <b><a href='#Antiparticles'>Antiparticles</a></b><br>
-          A relativistic emergence.
+          - Relativistic emergence
           <br><br>
           <b><a href='#Entanglement'>Entanglement</a></b><br>
-          David Bohm's nonlocality: a violation of Einstein's relativity.
+          - Nonlocality and causality
           <br><br>
           <b><a href='#Interpretations'>Interpretations</a></b><br>
-          Bohr's Copenhagen, Einstein's realist, and that of many worlds.
+          - Copenhagen<br>
+          - Realist<br>
+          - Many worlds
           <br><br>
           <b><a href='#Measurement'>Measurement</a></b><br>
-          Einstein-Podolsky-Rosen paper, Bohm's hidden variables, and John Bell's inequalities.
+          - EPR paper<br>
+          - Hidden variables<br>
+          - Bell inequalities
           <br><br>
           A recommendation is the book <i>Quantum</i> by Manjit Kumar; a captivating exposition, including an extensive historical recollection, of the quantum revolution. For the mathematically inclined, my references are Ramamurti Shankar's <i>Principles of Quantum Mechanics</i>, Steven Weinberg's <i>Lectures on Quantum Mechanics</i>, and Paul Dirac's <i>Lectures on Quantum Mechanics and Relativistic Field Theory</i>.
-          <br><br>
         </p>
       </article>
     </main>
