modified grid layout

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         </p>
       </section>
       <nav>
-        <div class='nav-item'>
-          <div class='nav-tile'></div>
+        <div class='nav-tile'></div>
+        <div class='nav-content'>
           <h2><a href='#Introduction'>INTRODUCTION</a></h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum efficitur sapien nec nisi tristique auctor. Quisque ullamcorper quis metus eu finibus. Proin consectetur, sem non feugiat congue, diam turpis dapibus eros, ut congue odio felis sit amet tellus.</p>
           <ul>
@@ -44,8 +44,9 @@
             <li>Matrix mechanics</li>
           </ul>
         </div>
-        <div class='nav-item'>
-          <div class='nav-tile'></div>
+        <div></div>
+        <div></div>
+        <div class='nav-content'>
           <h2><a href='#Wave-Particle Duality'>WAVE-PARTICLE DUALITY</a></h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum efficitur sapien nec nisi tristique auctor. Quisque ullamcorper quis metus eu finibus. Proin consectetur, sem non feugiat congue, diam turpis dapibus eros, ut congue odio felis sit amet tellus.</p>
           <ul>
@@ -54,8 +55,9 @@
             <li>Probabilistic interpretation</li>
           </ul>
         </div>
-        <div class='nav-item'>
-          <div class='nav-tile'></div>
+        <div class='nav-tile'></div>
+        <div class='nav-tile'></div>
+        <div class='nav-content'>
           <h2><a href='#Transformation Theory'>TRANSFORMATION THEORY</a></h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum efficitur sapien nec nisi tristique auctor. Quisque ullamcorper quis metus eu finibus. Proin consectetur, sem non feugiat congue, diam turpis dapibus eros, ut congue odio felis sit amet tellus.</p>
           <ul>
@@ -64,8 +66,9 @@
             <li>Time evolution</li>
           </ul>
         </div>
-        <div class='nav-item'>
-          <div class='nav-tile'></div>
+        <div></div>
+        <div></div>
+        <div class='nav-content'>
           <h2><a href='#Uncertainty'>UNCERTAINTY</a></h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum efficitur sapien nec nisi tristique auctor. Quisque ullamcorper quis metus eu finibus. Proin consectetur, sem non feugiat congue, diam turpis dapibus eros, ut congue odio felis sit amet tellus.</p>
           <ul>
@@ -74,32 +77,36 @@
             <li>General principle</li>
           </ul>
         </div>
-        <div class='nav-item'>
-          <div class='nav-tile'></div>
+        <div class='nav-tile'></div>
+        <div class='nav-tile'></div>
+        <div class='nav-content'>
           <h2><a href='#Spin'>SPIN</a></h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum efficitur sapien nec nisi tristique auctor. Quisque ullamcorper quis metus eu finibus. Proin consectetur, sem non feugiat congue, diam turpis dapibus eros, ut congue odio felis sit amet tellus.</p>
           <ul>
             <li>Rotational symmetry</li>
           </ul>
         </div>
-        <div class='nav-item'>
-          <div class='nav-tile'></div>
+        <div></div>
+        <div></div>
+        <div class='nav-content'>
           <h2><a href='#Antiparticles'>ANTIPARTICLES</a></h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum efficitur sapien nec nisi tristique auctor. Quisque ullamcorper quis metus eu finibus. Proin consectetur, sem non feugiat congue, diam turpis dapibus eros, ut congue odio felis sit amet tellus.</p>
           <ul>
             <li>Relativistic emergence</li>
           </ul>
         </div>
-        <div class='nav-item'>
-          <div class='nav-tile'></div>
+        <div class='nav-tile'></div>
+        <div class='nav-tile'></div>
+        <div class='nav-content'>
           <h2><a href='#Entanglement'>ENTANGLEMENT</a></h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum efficitur sapien nec nisi tristique auctor. Quisque ullamcorper quis metus eu finibus. Proin consectetur, sem non feugiat congue, diam turpis dapibus eros, ut congue odio felis sit amet tellus.</p>
           <ul>
             <li>Nonlocality and causality</li>
           </ul>
         </div>
-        <div class='nav-item'>
-          <div class='nav-tile'></div>
+        <div></div>
+        <div></div>
+        <div class='nav-content'>
           <h2><a href='#Interpretations'>INTERPRETATIONS</a></h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum efficitur sapien nec nisi tristique auctor. Quisque ullamcorper quis metus eu finibus. Proin consectetur, sem non feugiat congue, diam turpis dapibus eros, ut congue odio felis sit amet tellus.</p>
           <ul>
@@ -108,8 +115,9 @@
             <li>Many worlds</li>
           </ul>
         </div>
-        <div class='nav-item'>
-          <div class='nav-tile'></div>
+        <div class='nav-tile'></div>
+        <div class='nav-tile'></div>
+        <div class='nav-content'>
           <h2><a href='#Measurement'>MEASUREMENT</a></h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum efficitur sapien nec nisi tristique auctor. Quisque ullamcorper quis metus eu finibus. Proin consectetur, sem non feugiat congue, diam turpis dapibus eros, ut congue odio felis sit amet tellus.</p>
           <ul>
@@ -118,6 +126,7 @@
             <li>Bell inequalities</li>
           </ul>
         </div>
+        <div></div>
       </nav>
       <section>
         <p>
