--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <header>
-      <h1><a href='http://localhost:8000/'>QUANTISED</a></h1>
+      <h1><a href='https://artaurus.github.io/quantised/'>QUANTISED</a></h1>
     </header>
     <main>
       <section>
