--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
             Formulated by Dirac, this mathematical framework encompasses Schr&ouml;dinger's waves and Heisenberg's matrices. <i>States</i> are represented by vectors in an abstract space. <i>Observables</i>, such as position and momentum, are represented by operators.
           </p>
           <ul>
-            <li>State vector</li>
-            <li>Observables</li>
+            <li>States as vectors</li>
+            <li>Observables as operators</li>
             <li>Transformations</li>
           </ul>
         </div>
