--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class='nav-content'>
           <h2><a href='#Wave-Particle Duality'>WAVE-PARTICLE DUALITY</a></h2>
           <p>
-            A wave nature is postulated for matter particles, explaining the quantisation of stationary states. Schr&ouml;dinger's <i>wavefunction</i> is introduced in coordinate space, attributing a probabilistic interpretation to the position of a particle. The wavefunction replaces precise orbits with fuzzy <i>orbitals</i>, in the atomic model.
+            A wave nature is postulated for matter particles, explaining the quantisation of stationary states. Schr&ouml;dinger's <i>wavefunction</i> is introduced in coordinate space, attributing a probabilistic interpretation to the position of a particle. The wavefunction replaces precise orbits with cloudy <i>orbitals</i>, in the atomic model.
           </p>
           <ul>
             <li>Matter waves</li>
