--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href='images/psi.png' rel='icon' type='images/png'>
     <link href='reset.css' rel='stylesheet' type='text/css'>
     <link href='style.css' rel='stylesheet' type='text/css'>
+    <link href='graph.css' rel='stylesheet' type='text/css'>
     <link href='https://fonts.gstatic.com' rel='preconnect' crossorigin>
     <link href='https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap' rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap" rel="stylesheet">
